fix safari eagerload snap bug

--- a/src/styles/partials/_typography.css
+++ b/src/styles/partials/_typography.css
@@ -351,3 +351,8 @@ button {
     }
   }
 }
+
+.gatsby-image-wrapper img,
+.gatsby-image-wrapper > div {
+  transition: opacity 500ms ease 0s !important;
+}
