--- a/src/styles/partials/_base.css
+++ b/src/styles/partials/_base.css
@@ -95,6 +95,11 @@ button {
 
 html.has-scroll-smooth {
 	overflow: hidden;
+	position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 
 html.has-scroll-dragging {
